Basic img on screen from ship class

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -6,6 +6,8 @@
 	<!-- JS -->
 	<script src="../res/js/p5/p5.min.js"></script>
 	<script src="../res/js/space_invaders/space_invaders.js"></script>
+	<script src="../res/js/space_invaders/model/physicsObject.js"></script>
+	<script src="../res/js/space_invaders/model/ship.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
