--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -6,6 +6,10 @@
 	<!-- JS -->
 	<script src="../res/js/p5/p5.min.js"></script>
 	<script src="../res/js/space_invaders/space_invaders.js"></script>
+
+	<!-- Model -->
+	<script src="../res/js/space_invaders/model/game/game.js"></script>
+	<script src="../res/js/space_invaders/model/game/spaceInvaders.js"></script>
 	<script src="../res/js/space_invaders/model/physicsObject.js"></script>
 	<script src="../res/js/space_invaders/model/ship.js"></script>
 
