--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -10,8 +10,12 @@
 	<!-- Model -->
 	<script src="../res/js/space_invaders/model/game/game.js"></script>
 	<script src="../res/js/space_invaders/model/game/spaceInvaders.js"></script>
+
 	<script src="../res/js/space_invaders/model/physicsObject.js"></script>
 	<script src="../res/js/space_invaders/model/ship.js"></script>
+	
+	<script src="../res/js/space_invaders/model/enemy/enemy.js"></script>
+	<script src="../res/js/space_invaders/model/enemy/basicEnemy.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
