--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -17,6 +17,8 @@
 	<script src="../res/js/space_invaders/model/enemy/enemy.js"></script>
 	<script src="../res/js/space_invaders/model/enemy/basicEnemy.js"></script>
 
+	<script src="../res/js/space_invaders/model/bullet/bullet.js"></script>
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
 
