--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -19,6 +19,10 @@
 
 	<script src="../res/js/space_invaders/model/bullet/bullet.js"></script>
 
+	<script src="../res/js/space_invaders/model/animations/animation.js"></script>
+	<!-- <script src="../res/js/space_invaders/model/animations/"></script> -->
+
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
 
