--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -21,6 +21,7 @@
 
 	<script src="../res/js/space_invaders/model/animations/spcinvanimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/shipExplosionAnimation.js"></script>
+	<script src="../res/js/space_invaders/model/animations/basicEnemyAnimation.js"></script>
 
 
 	<!-- CSS -->
