--- a/mainMenu.html
+++ b/mainMenu.html
@@ -2,9 +2,24 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="./res/css/common/global_style.css">
+	<link rel="stylesheet" href="./res/css/common/global_variables.css">
+	<link rel="stylesheet" href="./res/css/common/header/header.css">
+
+	<!-- Web icon -->
+	<link rel="icon" href="./res/img/gameRoom.jpg">
+
 	<title>GameRoom</title>
 </head>
 <body>
-	
+	<div id="header">
+		<a href="./mainMenu.html">
+			<img class="logo" src="./res/img/gameRoom.png" alt="Inicio">
+			<a class="link" href="./mainMenu.html">Home</a>
+			<a class="link" href="./page/about_us.html">About us</a>
+		</a>
+	</div>
 </body>
 </html>
