--- a/mainMenu.html
+++ b/mainMenu.html
@@ -9,14 +9,14 @@
 	<link rel="stylesheet" href="./res/css/common/header/header.css">
 
 	<!-- Web icon -->
-	<link rel="icon" href="./res/img/gameRoom.jpg">
+	<link rel="icon" href="./res/img/logos/gameRoom.png">
 
 	<title>GameRoom</title>
 </head>
 <body>
 	<div id="header">
 		<a href="./mainMenu.html">
-			<img class="logo" src="./res/img/gameRoom.png" alt="Inicio">
+			<img class="logo" src="./res/img/logos/gameRoomDetailed.png" alt="Inicio">
 			<a class="link" href="./mainMenu.html">Home</a>
 			<a class="link" href="./page/about_us.html">About us</a>
 		</a>
