Let's add logic to mainMenu using js

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 
+	<!-- JS -->
+	<script src="../res/js/mainMenu/mainMenu.js"></script>
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/global_style.css">
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
@@ -19,6 +22,15 @@
 			<img class="logo" src="../res/img/logos/gameRoomDetailed.png" alt="Inicio">
 			<a class="link" href="./mainMenu.html">Home</a>
 			<a class="link" href="./about_us.html">About us</a>
+		</a>
+	</div>
+
+	<div id="gameSelector">
+		<a href="../games/space_invaders.html">
+			<div>
+				<h3>Space invaders</h3>
+				<img src="../res/img/thumbnail/space_invaders.png" alt="">
+			</div>
 		</a>
 	</div>
 </body>
