--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<script>
-		window.location.href = "mainMenu.html"
+		window.location.href = "./pages/mainMenu.html"
 	</script>
 </body>
 </html>
