basic style added

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="../res/css/common/global_style.css">
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
 	<link rel="stylesheet" href="../res/css/common/header/header.css">
+	<link rel="stylesheet" href="../res/css/mainMenu/mainMenu.css">
 
 	<!-- Web icon -->
 	<link rel="icon" href="../res/img/logos/gameRoom.png">
@@ -26,12 +27,13 @@
 	</div>
 
 	<div id="gameSelector">
-		<a href="../games/space_invaders.html">
-			<div>
-				<h3>Space invaders</h3>
+		<div class="game">
+			<h3>Space invaders</h3>
+			<a href="../games/space_invaders.html">
 				<img src="../res/img/thumbnail/space_invaders.png" alt="">
-			</div>
-		</a>
+			</a>
+			<p>This is a debug description for a testing game. Do not think this is valid.</p>
+		</div>
 	</div>
 </body>
 </html>
