games loaded into menuhtml usign js

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -28,7 +28,7 @@
 
 	<div id="gameSelector">
 		<div class="game">
-			<h3>Space invaders</h3>
+			<h3>Test game</h3>
 			<a href="../games/space_invaders.html">
 				<img src="../res/img/thumbnail/space_invaders.png" alt="">
 			</a>
