menu basic UI added

--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -27,13 +27,14 @@
 	</div>
 
 	<div id="gameSelector">
-		<div class="game">
+		<!-- <div class="game">
 			<h3>Test game</h3>
 			<a href="../games/space_invaders.html">
 				<img src="../res/img/thumbnail/space_invaders.png" alt="">
 			</a>
 			<p>This is a debug description for a testing game. Do not think this is valid.</p>
-		</div>
+		</div> -->
+		<!-- * Filled with JS -->
 	</div>
 </body>
 </html>
