working on a way to get game data from url parameters

--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -17,6 +17,16 @@
 	<title>.</title>
 </head>
 <body>
-	
+	<div id="header">
+		<a href="./mainMenu.html">
+			<img class="logo" src="../res/img/logos/gameRoomDetailed.png" alt="Inicio">
+			<a class="link" href="./mainMenu.html">Home</a>
+			<a class="link" href="./about_us.html">About us</a>
+		</a>
+	</div>
+
+	<div>
+		
+	</div>
 </body>
 </html>
