CSS of monitor imported

--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -25,8 +25,12 @@
 		</a>
 	</div>
 
-	<div>
-		
-	</div>
+	<!-- <div> -->
+		<div id="monitorcontainer">
+			<div id="monitor">
+			  <div id="monitorscreen"></div>
+			</div>
+		  </div>
+	<!-- </div> -->
 </body>
 </html>
