CSS updated to have a basic custom tv

--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -28,6 +28,7 @@
 	<div id="monitorcontainer">
 		<div id="monitor">
 			<div id="monitorscreen"></div>
+			<div id="bottombar"></div>
 		</div>
 	</div>
 </body>
