now using iframe to load html into gameMenu

--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -27,7 +27,7 @@
 
 	<div id="monitorcontainer">
 		<div id="monitor">
-			<div id="monitorscreen"></div>
+			<iframe id="monitorscreen" src="" frameborder="0"></iframe>
 			<div id="bottombar"></div>
 		</div>
 	</div>
