space invaders properly loaded into gameMenu!

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -27,6 +27,7 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
+	<link rel="stylesheet" href="../res/css/game/gameStyle.css">
 
 	<title>Space Invaders</title>
 </head>
