--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -26,6 +26,7 @@
 	</div>
 
 	<div id="monitorcontainer">
+		<h1 id="title"></h1>
 		<div id="monitor">
 			<iframe id="monitorscreen" src="" frameborder="0"></iframe>
 			<div id="bottombar"></div>
