Description added to gameMenu

--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -31,6 +31,7 @@
 			<iframe id="monitorscreen" src="" frameborder="0"></iframe>
 			<div id="bottombar"></div>
 		</div>
+		<div id="description"></div>
 	</div>
 </body>
 </html>
