about us created with section for special thanks

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -4,18 +4,17 @@
 	<meta charset="UTF-8">
 
 	<!-- JS -->
-	<script src="../res/js/mainMenu/mainMenu.js"></script>
+	<!-- <script src="../res/js/"></script> -->
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/global_style.css">
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
 	<link rel="stylesheet" href="../res/css/common/header/header.css">
-	<link rel="stylesheet" href="../res/css/mainMenu/mainMenu.css">
 
 	<!-- Web icon -->
 	<link rel="icon" href="../res/img/logos/gameRoom.png">
 
-	<title>GameRoom</title>
+	<title>About us</title>
 </head>
 <body>
 	<div id="header">
@@ -26,15 +25,34 @@
 		</a>
 	</div>
 
-	<div id="gameSelector">
-		<!-- <div class="game">
-			<h3>Test game</h3>
-			<a href="../games/space_invaders.html">
-				<img src="../res/img/thumbnail/space_invaders.png" alt="">
-			</a>
-			<p>This is a debug description for a testing game. Do not think this is valid.</p>
-		</div> -->
-		<!-- * Filled with JS -->
-	</div>
+	<h2>Special thanks</h2>
+	<h3>Style</h3>
+	<p>
+		Font: Nintendo font from
+		<a href="https://www.splintered.co.uk/experiments/132/">
+			splintered.co.uk
+		</a>
+	</p>
+	
+	<h3>Space Invaders</h3>
+	<p>
+		Ship sprite: from
+		<a href="https://alcwilliam.itch.io/alcwilliam-space-ship-pack">
+			alcwilliam-space-ship-pack
+		</a>
+	</p>
+	<p>
+		Emissary sprite: from
+		<a href="https://nexisgames.itch.io/spaceships">
+			nexisgames.itch.io
+		</a>
+	</p>
+	<p>
+		Inspiration for bullets: from
+		<a href="https://gvituri.itch.io/space-shooter">
+			gvituri.itch.io
+		</a>
+	</p>
+
 </body>
 </html>
