--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -21,7 +21,7 @@
 		<a href="./mainMenu.html">
 			<img class="logo" src="../res/img/logos/gameRoomDetailed.png" alt="Inicio">
 			<a class="link" href="./mainMenu.html">Home</a>
-			<a class="link" href="./about_us.html">About us</a>
+			<a class="link" href="./aboutUs.html">About us</a>
 		</a>
 	</div>
 
