--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -7,6 +7,8 @@
 	<script src="../res/js/p5/p5.min.js"></script>
 	<script src="../res/js/space_invaders/space_invaders.js"></script>
 
+	<script src="https://unpkg.com/p5bezier@0.2.4/lib/p5.bezier.min.js"></script>
+
 	<!-- Model -->
 	<script src="../res/js/space_invaders/model/game/game.js"></script>
 	<script src="../res/js/space_invaders/model/game/spaceInvaders.js"></script>
