Bessier class added to repository. Ready to be used

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -24,6 +24,8 @@
 	<script src="../res/js/space_invaders/model/animations/basicEnemyAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/enemySpawnAnimation.js"></script>
 
+	<!-- Tools -->
+	<script src="../res/js/space_invaders/tools/bessier.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
