--- a/games/pong_game.html
+++ b/games/pong_game.html
@@ -7,12 +7,13 @@
     <!-- JS -->
     <script src="../res/js/p5/p5.min.js"></script>
     <script src="../res/js/pong_game/pong_game.js"></script>
+    <script src="../res/js/pong_game/model/jugador.js"></script>
+
 
     <!-- CSS -->
     <link rel="stylesheet" href="../res/css/common/game_common.css">
 
-    <title>PONG
-    </title>
+    <title>PONG </title>
 </head>
 
 <body>
