title now with the name of the game played

--- a/pages/gameMenu.html
+++ b/pages/gameMenu.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="../res/css/gameMenu/gameMenu.css">
 
 	<!-- Icon -->
-	<link rel="icon" id="icon" href="">
-	<title>.</title>
+	<link rel="icon" id="icon" href="../res/img/logos/gameRoomDetailed.png">
+	<title></title>
 </head>
 <body>
 	<div id="header">
