working on menu for spaceinvaders

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -28,11 +28,17 @@
 	<script src="../res/js/space_invaders/tools/bessier.js"></script>
 
 	<!-- CSS -->
+	<link rel="stylesheet" href="../res/css/common/global_variables.css">
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
 	<link rel="stylesheet" href="../res/css/game/gameStyle.css">
+	<link rel="stylesheet" href="../res/css/game/space_invaders/space_invaders.css">
 
 	<title>Space Invaders</title>
 </head>
 <body>
+	<div id="mainmenu">
+		
+		<button id="btnstart">Start</button>
+	</div>
 </body>
 </html>
