Main menu updated with enemies, ship and animation

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -37,7 +37,23 @@
 </head>
 <body>
 	<div id="mainmenu">
-		
+		<div id="enemyhorde">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
+		</div>
+		<img src="../res/img/space_invaders/ships/ship_1.png" id="player" class="ship">
 		<button id="btnstart">Start</button>
 	</div>
 </body>
