--- a/games/snake_game.html
+++ b/games/snake_game.html
@@ -7,6 +7,7 @@
 	<script src="../res/js/p5/p5.min.js"></script>
 	<script src="../res/js/snake_game/snake_game.js"></script>
 	<script src="../res/js/snake_game/model/snake_body.js"></script>
+	<script src="../res/js/snake_game/model/apple.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
