--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -20,6 +20,7 @@
 	<script src="../res/js/space_invaders/model/bullet/bullet.js"></script>
 
 	<script src="../res/js/space_invaders/model/animations/spcinvanimation.js"></script>
+	<script src="../res/js/space_invaders/model/animations/imgAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/shipExplosionAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/basicEnemyAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/enemySpawnAnimation.js"></script>
