Working on logic to add bessier animations using a JSON file

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -24,6 +24,7 @@
 	<script src="../res/js/space_invaders/model/animations/shipExplosionAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/basicEnemyAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/enemySpawnAnimation.js"></script>
+	<script src="../res/js/space_invaders/model/animations/bessierAnimation.js"></script>
 
 	<!-- Tools -->
 	<script src="../res/js/space_invaders/tools/bessier.js"></script>
