--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -23,7 +23,7 @@
 	<script src="../res/js/space_invaders/model/animations/imgAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/shipExplosionAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/basicEnemyAnimation.js"></script>
-	<script src="../res/js/space_invaders/model/animations/enemySpawnAnimation.js"></script>
+	<!-- <script src="../res/js/space_invaders/model/animations/parabolaAnimation.js"></script> -->
 	<script src="../res/js/space_invaders/model/animations/bessierAnimation.js"></script>
 
 	<!-- Tools -->
