BasicEnemyAnimation Syncronized with new logic

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -22,6 +22,7 @@
 	<script src="../res/js/space_invaders/model/animations/spcinvanimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/imgAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/shipExplosionAnimation.js"></script>
+	<script src="../res/js/space_invaders/model/animations/SyncAnimation.js"></script>
 	<script src="../res/js/space_invaders/model/animations/basicEnemyAnimation.js"></script>
 	<!-- <script src="../res/js/space_invaders/model/animations/parabolaAnimation.js"></script> -->
 	<script src="../res/js/space_invaders/model/animations/bessierAnimation.js"></script>
