enemy IA con espasmos

--- a/games/pong_game.html
+++ b/games/pong_game.html
@@ -11,6 +11,7 @@
     <!-- MODEL -->
     <script src="../res/js/pong_game/model/jugador.js"></script>
     <script src="../res/js/pong_game/model/ball.js"></script>
+    <script src="../res/js/pong_game/model/enemyIA.js"></script>
 
 
     <!-- CSS -->
