Random generator class created to implement hitAnimation correctly

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -29,6 +29,7 @@
 
 	<!-- Tools -->
 	<script src="../res/js/space_invaders/tools/bessier.js"></script>
+	<script src="../res/js/space_invaders/tools/randomGenerator.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
