hit animation fully added

--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -26,6 +26,7 @@
 	<script src="../res/js/space_invaders/model/animations/basicEnemyAnimation.js"></script>
 	<!-- <script src="../res/js/space_invaders/model/animations/parabolaAnimation.js"></script> -->
 	<script src="../res/js/space_invaders/model/animations/bessierAnimation.js"></script>
+	<script src="../res/js/space_invaders/model/animations/shipHitAnimation.js"></script>
 
 	<!-- Tools -->
 	<script src="../res/js/space_invaders/tools/bessier.js"></script>
