--- a/games/pong_game.html
+++ b/games/pong_game.html
@@ -6,6 +6,7 @@
 
     <!-- JS -->
     <script src="../res/js/p5/p5.min.js"></script>
+    <script src="../res/js/p5/p5.sound.min.js"></script>
     <script src="../res/js/pong_game/pong_game.js"></script>
 
     <!-- MODEL -->
