--- a/games/space_invaders.html
+++ b/games/space_invaders.html
@@ -60,7 +60,7 @@
 			<img src="../res/img/space_invaders/ships/ship_3.png" id="ship" class="ship enemy">
 		</div>
 		<img src="../res/img/space_invaders/ships/ship_6.png" id="player" class="ship">
-		<button id="btnstart">Start</button>
+		<button id="btnstart" class="arcade-btn">Start</button>
 	</div>
 </body>
 </html>
