--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -9,14 +9,35 @@
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
 	<link rel="stylesheet" href="../res/css/game/gameStyle.css">
+	<link rel="stylesheet" href="../res/css/game/tictactoe/tictactoe.css">
+
 	<title>TicTacToe</title>
 </head>
 <body>
-	<div id="mainMenu">
-		<button>Easy</button>
-		<button>Medium</button>
-		<button>Impossible</button>
-		<button>2 Players</button>
+	<div id="mainmenu">
+		<div>
+			<button class="arcade-btn">Easy</button>
+			<button class="arcade-btn">Medium</button>
+			<button class="arcade-btn">Impossible</button>
+			<button class="arcade-btn">2 Players</button>	
+		</div>
+	</div>
+	<div id="gamemenu">
+		<div class="row">
+			<div class="cell"></div>
+			<div class="cell"></div>
+			<div class="cell"></div>
+		</div>
+		<div class="row">
+			<div class="cell"></div>
+			<div class="cell"></div>
+			<div class="cell"></div>
+		</div>
+		<div class="row">
+			<div class="cell"></div>
+			<div class="cell"></div>
+			<div class="cell"></div>
+		</div>
 	</div>
 </body>
 </html>
