--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 
 	<!-- JS -->
+	<script src="../res/js/tictactoe/tictactoe.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
