Enemy init refactored to get ready to add levels

--- a/games/spaceInvaders.html
+++ b/games/spaceInvaders.html
@@ -29,6 +29,8 @@
 	<script src="../res/js/spaceInvaders/model/animations/bessierAnimation.js"></script>
 	<script src="../res/js/spaceInvaders/model/animations/shipHitAnimation.js"></script>
 
+	<script src="../res/js/spaceInvaders/model/level/level.js"></script>
+
 	<!-- Tools -->
 	<script src="../res/js/spaceInvaders/tools/bessier.js"></script>
 	<script src="../res/js/spaceInvaders/tools/randomGenerator.js"></script>
