--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -54,5 +54,14 @@
 		</a>
 	</p>
 
+	<h2>Inspirations</h2>
+	<p>
+		Inpired in the use of Bessier curves to define trayectories of enemies:
+		<br>
+		<a href="https://editor.p5js.org/codingtrain/sketches/kZ8dpklQg">The coding train</a> 
+		<br>
+		<a href="https://github.com/peilingjiang/p5.bezier/blob/main/src/p5.bezier.js">Bessier implementation</a>
+	</p>
+
 </body>
 </html>
