Game Over menu added

--- a/games/spaceInvaders.html
+++ b/games/spaceInvaders.html
@@ -64,5 +64,50 @@
 		<img src="../res/img/spaceInvaders/ships/ship_6.png" id="player" class="ship">
 		<button id="btnstart" class="arcade-btn">Start</button>
 	</div>
+	<div id="gameover">
+		<h2>Game over</h2>
+		<div class="results">
+			<!-- <div> -->
+				<div class="enemyresult">
+					<img src="../res/img/spaceInvaders/ships/ship_2.png" class="ship enemy">
+					<label id="score2">x10</label>
+				</div>
+			<!-- </div> -->
+			<br>
+			<div>
+				<div class="enemyresult">
+					<label id="score3">x10</label>
+					<img src="../res/img/spaceInvaders/ships/ship_3.png" class="ship enemy">
+				</div>
+				<div class="enemyresult">
+					<img src="../res/img/spaceInvaders/ships/ship_4.png" class="ship enemy">
+					<label id="score4">x10</label>
+				</div>
+			</div>
+			<br>
+			<div>
+				<div class="enemyresult">
+					<label id="score1">x10</label>
+					<img src="../res/img/spaceInvaders/ships/ship_1.png" class="ship enemy">
+				</div>
+				<div class="enemyresult">
+					<img src="../res/img/spaceInvaders/ships/ship_5.png" class="ship enemy">
+					<label id="score5">x10</label>
+				</div>
+			</div>
+			<br>
+			<div>
+				<div class="enemyresult">
+					<label id="scoreBeholder">x10</label>
+					<img src="../res/img/spaceInvaders/enemies/Beholder.png" class="ship enemy boss">
+				</div>
+				<div class="enemyresult">
+					<img src="../res/img/spaceInvaders/enemies/Emissary.png" class="ship enemy boss">
+					<label id="scoreEmissary">x10</label>
+				</div>
+			</div>
+		</div>
+		<h3>Thanks for playing!</h3>
+	</div>
 </body>
 </html>
