Stats class created

--- a/games/spaceInvaders.html
+++ b/games/spaceInvaders.html
@@ -19,6 +19,8 @@
 
 	<script src="../res/js/spaceInvaders/model/object/bullet/bullet.js"></script>
 
+	<script src="../res/js/spaceInvaders/model/game/stats/statsSpaceInvaders.js"></script>
+
 	<script src="../res/js/spaceInvaders/model/animations/spcinvanimation.js"></script>
 	<script src="../res/js/spaceInvaders/model/animations/imgAnimation.js"></script>
 	<script src="../res/js/spaceInvaders/model/animations/shipExplosionAnimation.js"></script>
@@ -66,29 +68,29 @@
 			<!-- <div> -->
 				<div class="enemyresult">
 					<img src="../res/img/spaceInvaders/enemies/ship_tutorial.png" class="ship enemy">
-					<label id="score2">x10</label>
+					<label id="scoreTutorial">x10</label>
 				</div>
 			<!-- </div> -->
 			<br>
 			<div>
 				<div class="enemyresult">
-					<label id="score3">x10</label>
+					<label id="scoreIce">x10</label>
 					<img src="../res/img/spaceInvaders/enemies/ship_ice.png" class="ship enemy">
 				</div>
 				<div class="enemyresult">
 					<img src="../res/img/spaceInvaders/enemies/ship_ice_fast.png" class="ship enemy">
-					<label id="score4">x10</label>
+					<label id="scoreIceFast">x10</label>
 				</div>
 			</div>
 			<br>
 			<div>
 				<div class="enemyresult">
-					<label id="score1">x10</label>
+					<label id="scoreFire">x10</label>
 					<img src="../res/img/spaceInvaders/enemies/ship_fire.png" class="ship enemy">
 				</div>
 				<div class="enemyresult">
 					<img src="../res/img/spaceInvaders/enemies/ship_fire_fast.png" class="ship enemy">
-					<label id="score5">x10</label>
+					<label id="scoreFireFast">x10</label>
 				</div>
 			</div>
 			<br>
