Hover animation added to ship

--- a/games/spaceInvaders.html
+++ b/games/spaceInvaders.html
@@ -28,6 +28,7 @@
 	<script src="../res/js/spaceInvaders/model/animations/basicEnemyAnimation.js"></script>
 	<script src="../res/js/spaceInvaders/model/animations/bessierAnimation.js"></script>
 	<script src="../res/js/spaceInvaders/model/animations/shipHitAnimation.js"></script>
+	<script src="../res/js/spaceInvaders/model/animations/hoverAnimation.js"></script>
 
 	<!-- Tools -->
 	<script src="../res/js/spaceInvaders/tools/bessier.js"></script>
