Now able to play again

--- a/games/spaceInvaders.html
+++ b/games/spaceInvaders.html
@@ -107,6 +107,7 @@
 			</div>
 		</div>
 		<h3>Thanks for playing!</h3>
+		<button id="btnrestart" class="arcade-btn">Play Again</button>
 	</div>
 </body>
 </html>
