Logic to scale cross ready. Working on cross itself

--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -25,7 +25,12 @@
 	</div>
 	<div id="gamemenu">
 		<div class="row">
-			<div class="cell"></div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
 			<div class="cell"></div>
 			<div class="cell"></div>
 		</div>
