--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -31,18 +31,58 @@
 					<div class="line"></div>
 				</div>
 			</div>
-			<div class="cell"></div>
-			<div class="cell"></div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
+			<div class="cell">
+				<div class="cross selected">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
 		</div>
 		<div class="row">
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
 		</div>
 		<div class="row">
-			<div class="cell"></div>
-			<div class="cell"></div>
-			<div class="cell"></div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
+			<div class="cell">
+				<div class="cross">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
