--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -26,15 +26,21 @@
 	<div id="gamemenu">
 		<div class="row">
 			<div class="cell">
-				<div class="cross">
+				<div class="cross unselected">
 					<div class="line"></div>
 					<div class="line"></div>
 				</div>
+				<div class="circle">
+					<div></div>
+				</div>
 			</div>
 			<div class="cell">
-				<div class="cross">
+				<div class="cross unselected">
 					<div class="line"></div>
 					<div class="line"></div>
+				</div>
+				<div class="circle selected">
+					<div></div>
 				</div>
 			</div>
 			<div class="cell">
