Able to change status of cells using js

--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -30,7 +30,7 @@
 					<div class="line"></div>
 					<div class="line"></div>
 				</div>
-				<div class="circle">
+				<div class="circle unselected">
 					<div></div>
 				</div>
 			</div>
@@ -39,54 +39,75 @@
 					<div class="line"></div>
 					<div class="line"></div>
 				</div>
-				<div class="circle selected">
+				<div class="circle unselected">
 					<div></div>
 				</div>
 			</div>
 			<div class="cell">
-				<div class="cross selected">
+				<div class="cross unselected">
 					<div class="line"></div>
 					<div class="line"></div>
+				</div>
+				<div class="circle unselected">
+					<div></div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="cell">
-				<div class="cross">
+				<div class="cross unselected">
 					<div class="line"></div>
 					<div class="line"></div>
 				</div>
-			</div>
-			<div class="cell">
-				<div class="cross">
-					<div class="line"></div>
-					<div class="line"></div>
+				<div class="circle unselected">
+					<div></div>
 				</div>
 			</div>
 			<div class="cell">
-				<div class="cross">
+				<div class="cross unselected">
 					<div class="line"></div>
 					<div class="line"></div>
+				</div>
+				<div class="circle unselected">
+					<div></div>
+				</div>
+			</div>
+			<div class="cell">
+				<div class="cross unselected">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+				<div class="circle unselected">
+					<div></div>
 				</div>
 			</div>
 		</div>
 		<div class="row">
 			<div class="cell">
-				<div class="cross">
+				<div class="cross unselected">
 					<div class="line"></div>
 					<div class="line"></div>
 				</div>
-			</div>
-			<div class="cell">
-				<div class="cross">
-					<div class="line"></div>
-					<div class="line"></div>
+				<div class="circle unselected">
+					<div></div>
 				</div>
 			</div>
 			<div class="cell">
-				<div class="cross">
+				<div class="cross unselected">
 					<div class="line"></div>
 					<div class="line"></div>
+				</div>
+				<div class="circle unselected">
+					<div></div>
+				</div>
+			</div>
+			<div class="cell">
+				<div class="cross unselected">
+					<div class="line"></div>
+					<div class="line"></div>
+				</div>
+				<div class="circle unselected">
+					<div></div>
 				</div>
 			</div>
 		</div>
