--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -7,6 +7,7 @@
 	<script src="../res/js/tictactoe/sketch.js"></script>
 
 	<script src="../res/js/tictactoe/model/tictactoe.js"></script>
+	<script src="../res/js/tictactoe/model/tictactoeUI.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
