--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -20,10 +20,10 @@
 <body>
 	<div id="mainmenu">
 		<div>
-			<button class="arcade-btn">Easy</button>
-			<button class="arcade-btn">Medium</button>
-			<button class="arcade-btn">Impossible</button>
-			<button class="arcade-btn">2 Players</button>	
+			<button class="arcade-btn" id="btn-easy">Easy</button>
+			<button class="arcade-btn" id="btn-medium">Medium</button>
+			<button class="arcade-btn" id="btn-impossible">Impossible</button>
+			<button class="arcade-btn" id="btn-2players">2 Players</button>
 		</div>
 	</div>
 	<div id="gamemenu">
