Something is wrong with the AI logic

--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -8,6 +8,8 @@
 
 	<script src="../res/js/tictactoe/model/tictactoe.js"></script>
 	<script src="../res/js/tictactoe/model/tictactoeUI.js"></script>
+	<script src="../res/js/tictactoe/model/tictactoeUI_AI.js"></script>
+	<script src="../res/js/tictactoe/model/TictactoeAI.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
