--- a/pages/mainMenu.html
+++ b/pages/mainMenu.html
@@ -22,6 +22,7 @@
 		<a href="./mainMenu.html">
 			<img class="logo" src="../res/img/logos/gameRoomDetailed.png" alt="Inicio">
 			<a class="link" href="./mainMenu.html">Home</a>
+			<a class="link" href="./bugReport.html">Report Bug</a>
 			<a class="link" href="./aboutUs.html">About us</a>
 		</a>
 	</div>
