Bug on invalid field

--- a/pages/bugReport.html
+++ b/pages/bugReport.html
@@ -27,7 +27,7 @@
 		</a>
 	</div>
 
-	<form name="datos" method="post" action="mailto:mail@github.com">
+	<form name="bugReport" method="post" action="mailto:mail@github.com">
 		<h1>Bug Report</h1>
 		<fieldset>
 			<h3>Bug Information</h3>
@@ -68,7 +68,8 @@
 				<input type="radio" name="sexo"> ??
 			</div>
 		</fieldset>
-		<input type="submit" value="Send" class="arcade-btn">
+		<button id="btnSubmit" class="arcade-btn">Send</button>
+		<!-- <input type="submit" value="Send" class="arcade-btn" id="btnSubmit"> -->
 	</form>
 </body>
 </html>
