Working on form validation bug

--- a/pages/bugReport.html
+++ b/pages/bugReport.html
@@ -55,11 +55,11 @@
 			<h3>User Information</h3>
 			<!-- Datos usuario que reporta -->
 			<label for="username">Name:</label>
-			<input type="text" name="username" id="username" placeholder="Your name">
+			<input type="text" name="username" id="username" placeholder="Your name" required>
 			<label for="email">Email:</label>
-			<input type="text" name="email" id="email" placeholder="Your email">
+			<input type="text" name="email" id="email" placeholder="Your email" required>
 			<label for="phone">Phone:</label>
-			<input type="number" name="phone" id="phone" placeholder="Your phone">
+			<input type="number" name="phone" id="phone" placeholder="Your phone" required>
 			<p>Gender</p>
 			<div>
 				<input type="radio" name="sexo"> male
