--- a/pages/bugReport.html
+++ b/pages/bugReport.html
@@ -27,7 +27,7 @@
 		</a>
 	</div>
 
-	<form name="bugReport" method="post" action="mailto:mail@github.com">
+	<form name="bugReport" id="bugReport" method="post" action="mailto:mail@github.com">
 		<h1>Bug Report</h1>
 		<fieldset>
 			<h3>Bug Information</h3>
