--- a/games/tictactoe.html
+++ b/games/tictactoe.html
@@ -21,6 +21,7 @@
 </head>
 <body>
 	<div id="mainmenu">
+		<h1>Tictactoe</h1>
 		<div>
 			<button class="arcade-btn" id="btn-easy">Easy</button>
 			<button class="arcade-btn" id="btn-medium">Medium</button>
