--- a/games/wordle.html
+++ b/games/wordle.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>WordlEsp</title>
 
-    <script src="../res/js/scripts.js"></script>
+    <script src="../res/js/wordle/scripts.js"></script>
 
-    <link rel="stylesheet" href="../res/css/estilos.css"/>
+    <link rel="stylesheet" href="../res/css/game/wordle/estilos.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
