--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -21,6 +21,7 @@
 		<a href="./mainMenu.html">
 			<img class="logo" src="../res/img/logos/gameRoomDetailed.png" alt="Inicio">
 			<a class="link" href="./mainMenu.html">Home</a>
+			<a class="link" href="./bugReport.html">Report Bug</a>
 			<a class="link" href="./aboutUs.html">About us</a>
 		</a>
 	</div>
@@ -54,13 +55,23 @@
 		</a>
 	</p>
 
+	<h3>Beta testers:</h3>
+	<a href="https://github.com/SubliminalMessage">SubliminalMessage</a>
+	<a href="https://github.com/JuanVRobles3">JuanVRobles3</a>
+	<a href="https://github.com/Brandommoore">Brandommoore</a>
+	<a href="https://github.com/gecasado">gecasado</a>
+	<a href="https://github.com/Zexas1990">Zexas1990</a>
+
+
 	<h2>Inspirations</h2>
 	<p>
-		Inpired in the use of Bessier curves to define trayectories of enemies:
-		<br>
-		<a href="https://editor.p5js.org/codingtrain/sketches/kZ8dpklQg">The coding train</a> 
-		<br>
-		<a href="https://github.com/peilingjiang/p5.bezier/blob/main/src/p5.bezier.js">Bessier implementation</a>
+		<p>Inspired in the use of Bessier curves to define trayectories of enemies:</p>
+		<p>
+			<a href="https://editor.p5js.org/codingtrain/sketches/kZ8dpklQg">The coding train</a> 
+		</p>
+		<p>
+			<a href="https://github.com/peilingjiang/p5.bezier/blob/main/src/p5.bezier.js">Bessier implementation</a>
+		</p>
 	</p>
 
 </body>
