Wordle now with header

--- a/games/wordle.html
+++ b/games/wordle.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>WordlEsp</title>
 
+
+	<link rel="stylesheet" href="../res/css/common/global_style.css">
+	<link rel="stylesheet" href="../res/css/common/global_variables.css">
+	<link rel="stylesheet" href="../res/css/common/header/header.css">
+
     <script src="../res/js/wordle/scripts.js"></script>
 
     <link rel="stylesheet" href="../res/css/game/wordle/estilos.css"/>
@@ -11,6 +16,14 @@
 </head>
 
 <body>
+  <div id="header">
+		<a href="../pages/mainMenu.html">
+			<img class="logo" src="../res/img/logos/gameRoomDetailed.png" alt="Inicio">
+			<a class="link" href="../pages/mainMenu.html">Home</a>
+			<a class="link" href="../pages/bugReport.html">Report Bug</a>
+			<a class="link" href="../pages/aboutUs.html">About us</a>
+		</a>
+	</div>
     <div id="container">
         <div id="juego">
             <header>
