--- a/games/pong_game.html
+++ b/games/pong_game.html
@@ -57,6 +57,19 @@
         </div>-->
     </div>
 
+    <div id="gameover">
+        <div id="gameover-text">
+            <h1>GAME OVER</h1>
+           
+            <button class="arcade-btn" id="btn-restart">Restart</button>
+        </div>
+    </div>
+
+    <div>
+        <div>
+        </div>
+    </div>
+
 </body>
 
 </html>
