--- a/games/snake_game.html
+++ b/games/snake_game.html
@@ -6,16 +6,53 @@
 	<!-- JS -->
 	<script src="../res/js/p5/p5.min.js"></script>
 	<script src="../res/js/snake_game/snake_game.js"></script>
-	<script src="../res/js/snake_game/model/snake.js"></script>
-	<script src="../res/js/snake_game/model/apple.js"></script>
+	<script src="../res/js/snake_game/sketch.js"></script>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="../res/css/common/global_variables.css">
 	<link rel="stylesheet" href="../res/css/common/game_common.css">
 	<link rel="stylesheet" href="../res/css/game/gameStyle.css">
+	<link rel="stylesheet" href="../res/css/game/snake/snake.css">
 
+	<!-- MODEL -->
+
+	<script src="../res/js/snake_game/model/snake.js"></script>
+	<script src="../res/js/snake_game/model/apple.js"></script>
+	
 	<title>Snake</title>
 </head>
 <body>
+   
+    <div id="startmenu">
+        <div>
+            <button class="arcade-btn" id="btn-start">Start</button>
+        </div>
+
+    </div>
+
+    <div id="gamemenu">
+        <div id="difficultySreen">
+            <button class="arcade-btn" id="btn-easy">Easy</button>
+            <button class="arcade-btn" id="btn-medium">Medium</button>
+            <button class="arcade-btn" id="btn-impossible">Impossible</button>
+
+        </div>
+
+    </div>
+
+    <div id="gameover">
+        <div id="gameover-text">
+            <h1>GAME OVER</h1>
+           
+            <button class="arcade-btn" id="btn-restart">Restart</button>
+        </div>
+    </div>
+
+    <div>
+        <div>
+        </div>
+    </div>
+
 </body>
+
 </html>
