Authors added. Final version

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -26,6 +26,13 @@
 		</a>
 	</div>
 
+	<h2>Authors</h2>
+	<p>Maria Duque <a href="https://github.com/mariaduva">github</a></p>
+	<p>Lucia Collado <a href="https://github.com/luciia23">github</a></p>
+	<p>Pedro Jimenez <a href="https://github.com/Pedrojimvi">github</a></p>
+	<p>Jorge Re <a href="https://github.com/jkutkut">github</a></p>
+
+
 	<h2>Special thanks</h2>
 	<h3>Style</h3>
 	<p>
